tests/baselines/reference/genericCallWithObjectTypeArgsAndConstraints5.errors.txt
tests/cases/conformance/types/typeRelationships/typeInference/genericCallWithObjectTypeArgsAndConstraints5.ts(18,17): error TS2345: Argument of type 'C' is not assignable to parameter of type 'D'.
  Property 'y' is missing in type 'C' but required in type 'D'.
tests/cases/conformance/types/typeRelationships/typeInference/genericCallWithObjectTypeArgsAndConstraints5.ts(19,23): error TS2345: Argument of type '() => void' is not assignable to parameter of type '() => number'.
  Type 'void' is not assignable to type 'number'.
tests/cases/conformance/types/typeRelationships/typeInference/genericCallWithObjectTypeArgsAndConstraints5.ts(22,24): error TS2345: Argument of type 'C' is not assignable to parameter of type 'T'.
  'C' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.


==== tests/cases/conformance/types/typeRelationships/typeInference/genericCallWithObjectTypeArgsAndConstraints5.ts (3 errors) ====
    // Generic call with constraints infering type parameter from object member properties
    
    class C {
        x: string;
    }
    
    class D {
        x: string;
        y: string;
    }
    
    function foo<T, U extends T>(t: T, t2: U) {
        return (x: T) => t2;
    }
    
    var c: C;
    var d: D;
    var r2 = foo(d, c); // the constraints are self-referencing, no downstream error
                    ~
!!! error TS2345: Argument of type '{|C|0|}' is not assignable to parameter of type '{|D|1|}'.
!!! error TS2345:   Property 'y' is missing in type 'C' but required in type 'D'.
!!! related TS2728 tests/cases/conformance/types/typeRelationships/typeInference/genericCallWithObjectTypeArgsAndConstraints5.ts:9:5: 'y' is declared here.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/typeInference/genericCallWithObjectTypeArgsAndConstraints5.ts:3:7
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/typeInference/genericCallWithObjectTypeArgsAndConstraints5.ts:7:7
    var r9 = foo(() => 1, () => { }); // the constraints are self-referencing, no downstream error
                          ~~~~~~~~~
!!! error TS2345: Argument of type '() => void' is not assignable to parameter of type '() => number'.
!!! error TS2345:   Type 'void' is not assignable to type 'number'.
    
    function other<T, U extends T>() {
        var r5 = foo<T, U>(c, d); // error
                           ~
!!! error TS2345: Argument of type '{|C|0|}' is not assignable to parameter of type '{|T|1|}'.
!!! error TS2345:   '{|C|2|}' is assignable to the constraint of type '{|T|3|}', but '{|T|4|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/typeInference/genericCallWithObjectTypeArgsAndConstraints5.ts:3:7
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/typeInference/genericCallWithObjectTypeArgsAndConstraints5.ts:21:16
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/typeInference/genericCallWithObjectTypeArgsAndConstraints5.ts:3:7
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/typeInference/genericCallWithObjectTypeArgsAndConstraints5.ts:21:16
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/typeInference/genericCallWithObjectTypeArgsAndConstraints5.ts:21:16
    }
    